--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -3,6 +3,6 @@
     height: 100vh;
     display: flex;
     flex-flow: column nowrap;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
 }
