--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,13 +51,69 @@ a:hover {
 
 .imageWrapper {
     width: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 
 /* text animation */
 
 .animated-text-wrapper {
+    /* margin: 10% 20%; */
     border: red solid 3px;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
 }
+
+.line {
+    border: solid pink 2px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* width: 100vw;
+    height: 10vh; */
+    /* flex-basis: 100% */
+}
+
+.content {
+    border: solid 1px black;
+}
+
+.left,
+.right {
+    /* width: 50vw;
+    overflow: hidden;
+    display: inline-block; */
+}
+
+.left {
+    background-color: rgb(253, 6, 47);
+    width: 50%;
+    flex-basis: 100%
+    /* transform: skew(0deg, -15deg); */
+}
+
+.right {
+    color: black;
+    background-color: rgb(60, 6, 253);
+    flex-basis: 33.3%;
+    width: 50%;
+    /* transform: skew(0deg, 15deg); */
+}
+
+
+/* span {
+    display: inline-block;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 4vw;
+    text-transform: uppercase;
+    line-height: .8;
+    transition: ease-out .6s;
+} */
